Initial commit for validate-pull-request-title action

--- a/.github/workflows/internal-run-jest-tests.yml
+++ b/.github/workflows/internal-run-jest-tests.yml
@@ -31,6 +31,7 @@ jobs:
           - "github-app-token/"
           - "publish-release-notes/"
           - "get-release-notes/"
+          - "validate-pull-request-title/"
           # Add more folders as needed
 
     steps:
