--- a/.github/workflows/internal-linter.yml
+++ b/.github/workflows/internal-linter.yml
@@ -7,6 +7,7 @@ on:
       - "github-app-token/**"
       - "publish-release-notes/**"
       - "get-release-notes/**"
+      - "validate-pull-request-title/**"
       # Add more folders as needed
   push:
     branches:
@@ -16,6 +17,7 @@ on:
       - "github-app-token/**"
       - "publish-release-notes/**"
       - "get-release-notes/**"
+      - "validate-pull-request-title/**"
       # Add more folders as needed
 
 permissions:
@@ -38,6 +40,7 @@ jobs:
           - "github-app-token/"
           - "publish-release-notes/"
           - "get-release-notes/"
+          - "validate-pull-request-title/"
           # Add more folders as needed
 
     steps:
