--- a/validate-pull-request-title/action.yml
+++ b/validate-pull-request-title/action.yml
@@ -25,7 +25,7 @@ outputs:
   is-valid:
     description: Indicates if the title is valid or not
   error-message:
-    ddescription: |
+    description: |
       A detailed message indicating why the pull request title is invalid. 
       This may include information such as exceeding maximum length, not meeting minimum length, or lacking required prefixes.
 
