--- a/.github/workflows/internal-linter.yml
+++ b/.github/workflows/internal-linter.yml
@@ -45,14 +45,14 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # pin@v4.1.4
         with:
           # super-linter needs the full git history to get the
           # list of files that changed across commits
           fetch-depth: 0
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@0a44ba7841725637a19e28fa30b79a866c81b0a6 # pin@v4.0.4
         with:
           node-version-file: ${{ matrix.folder }}/.node-version
           cache-dependency-path: ${{ matrix.folder }}/package-lock.json
@@ -63,7 +63,7 @@ jobs:
         working-directory: ${{ matrix.folder }}
 
       - name: Lint Codebase
-        uses: super-linter/super-linter/slim@v6
+        uses: super-linter/super-linter/slim@b92721f792f381cedc002ecdbb9847a15ece5bb8 # pin@v7.1.0
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
