--- a/.github/workflows/internal-publish-release.yml
+++ b/.github/workflows/internal-publish-release.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # pin@v4.1.4
 
       - name: Create Release
         run: gh release create ${{github.ref_name}} --generate-notes
