--- a/.github/workflows/internal-run-bats-tests.yml
+++ b/.github/workflows/internal-run-bats-tests.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Checkout code
         id: checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # pin@v4.1.4
         with:
           submodules: "true"
 
