--- a/run-actionlint/action.yml
+++ b/run-actionlint/action.yml
@@ -4,7 +4,7 @@ author: Digdir Platform Team
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # pin@v4.1.4
 
     - name: Download actionlint
       id: download-actionlint
