--- a/publish-release-notes/.github/linters/.eslintrc.yml
+++ b/publish-release-notes/.github/linters/.eslintrc.yml
@@ -51,9 +51,9 @@ rules:
     "@typescript-eslint/ban-ts-comment": "error",
     "@typescript-eslint/consistent-type-assertions": "error",
     "@typescript-eslint/explicit-member-accessibility":
-      ["error", {"accessibility": "no-public"}],
+      ["error", { "accessibility": "no-public" }],
     "@typescript-eslint/explicit-function-return-type":
-      ["error", {"allowExpressions": true}],
+      ["error", { "allowExpressions": true }],
     "@typescript-eslint/func-call-spacing": ["error", "never"],
     "@typescript-eslint/no-array-constructor": "error",
     "@typescript-eslint/no-empty-interface": "error",
@@ -80,5 +80,5 @@ rules:
     "@typescript-eslint/semi": ["error", "always"],
     "@typescript-eslint/space-before-function-paren": "off",
     "@typescript-eslint/type-annotation-spacing": "error",
-    "@typescript-eslint/unbound-method": "error",
+    "@typescript-eslint/unbound-method": "error"
   }
