--- a/validate-pull-request-title/.github/linters/.eslintrc.yml
+++ b/validate-pull-request-title/.github/linters/.eslintrc.yml
@@ -79,5 +79,5 @@ rules:
     "@typescript-eslint/semi": ["error", "always"],
     "@typescript-eslint/space-before-function-paren": "off",
     "@typescript-eslint/type-annotation-spacing": "error",
-    "@typescript-eslint/unbound-method": "error",
+    "@typescript-eslint/unbound-method": "error"
   }
