--- a/.github/workflows/internal-linter.yml
+++ b/.github/workflows/internal-linter.yml
@@ -45,14 +45,14 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # pin@v5.0.0
         with:
           # super-linter needs the full git history to get the
           # list of files that changed across commits
           fetch-depth: 0
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # pin@v5.0.0
         with:
           node-version-file: ${{ matrix.folder }}/.node-version
           cache-dependency-path: ${{ matrix.folder }}/package-lock.json
@@ -63,7 +63,7 @@ jobs:
         working-directory: ${{ matrix.folder }}
 
       - name: Lint Codebase
-        uses: super-linter/super-linter/slim@v7
+        uses: super-linter/super-linter/slim@ffde3b2b33b745cb612d787f669ef9442b1339a6 # pin@v8.1.0
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
