--- a/.github/workflows/internal-publish-release.yml
+++ b/.github/workflows/internal-publish-release.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # pin@v5.0.0
 
       - name: Create Release
         run: gh release create ${{github.ref_name}} --generate-notes
