--- a/.github/workflows/internal-run-bats-tests.yml
+++ b/.github/workflows/internal-run-bats-tests.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Checkout code
         id: checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # pin@v5.0.0
         with:
           submodules: "true"
 
