--- a/.github/workflows/internal-run-jest-tests.yml
+++ b/.github/workflows/internal-run-jest-tests.yml
@@ -39,12 +39,12 @@ jobs:
     steps:
       - name: Checkout code
         id: checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # pin@v5.0.0
         with:
           submodules: "true"
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # pin@v5.0.0
         with:
           node-version-file: ${{ matrix.folder }}/.node-version
           cache-dependency-path: ${{ matrix.folder }}/package-lock.json
