--- a/publish-release-notes/.github/linters/.eslintrc.yml
+++ b/publish-release-notes/.github/linters/.eslintrc.yml
@@ -1,3 +1,4 @@
+---
 env:
   node: true
   es6: true
@@ -79,5 +80,5 @@ rules:
     "@typescript-eslint/semi": ["error", "always"],
     "@typescript-eslint/space-before-function-paren": "off",
     "@typescript-eslint/type-annotation-spacing": "error",
-    "@typescript-eslint/unbound-method": "error",
+    "@typescript-eslint/unbound-method": "error"
   }
