--- a/run-actionlint/action.yml
+++ b/run-actionlint/action.yml
@@ -4,7 +4,7 @@ author: Digdir Platform Team
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # pin@v5.0.0
 
     - name: Download actionlint
       id: download-actionlint
